--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
     "react-native-blur": "^2.0.0",
+    "react-native-gifted-messenger": "^0.1.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
