--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "react-native": "^0.44.0",
     "react-native-blur": "^2.0.0",
     "react-native-gifted-messenger": "^0.1.4",
+    "react-native-grid-component": "^1.0.6",
+    "react-native-lightbox": "^0.6.0",
+    "react-native-looped-carousel": "^0.1.7",
+    "react-native-navbar": "^1.7.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
