--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "firebase": "^4.1.2",
+    "querystring": "^0.2.0",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.45.1",
     "react-native-blur": "^3.0.0",
@@ -14,6 +16,7 @@
     "react-native-lightbox": "^0.6.0",
     "react-native-looped-carousel": "^0.1.7",
     "react-native-navbar": "^1.7.1",
+    "react-navigation": "^1.0.0-beta.11",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
